@@ -1,6 +1,12 @@
-2013-03-23  Wolfgang Lux  <wlux@uni-muenster.de>
+2013-04-04  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
-	* Tools/STEnvironmentProcess.m (initWithDescriptionName:):
+	* Frameworks/StepTalk/NSObject+additions.h (-yourself):
+	* Frameworks/StepTalk/NSObject+additions.m (-yourself): Add
+	standard Smalltalk method, which is convenient in cascades.
+
+2013-03-23  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* Tools/STEnvironmentProcess.m (-initWithDescriptionName:):
 	Check the result of the super class initializer and assign it to
 	self.
 
